[package]
name = "bmail"
version = "0.1.0"
edition = "2018"
description = "(Unfinished) Internet message and MIME implementation"
license = "Apache-2.0"
repository = "https://github.com/umanwizard/bmail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
quoted_printable = "0.4"
nom = {git = "https://github.com/umanwizard/nom" }
charset = "0.1"
chrono = "0.4"
enum-kinds = "0.5"
regex = "1.5"
regex-syntax = "0.6"

[[bin]]
name = "header_layout"
path = "src/headers/layout.rs"
